--- a/bos_test2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/bos_test2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/RollingCPP/Maps/RollingExampleMap
 
 [ModuleFileTracking]
-bos_test2.TimeStamp=2015.10.25-17.00.51
+bos_test2.TimeStamp=2015.10.25-19.05.40
 bos_test2.LastCompileMethod=Runtime
 PakFile.TimeStamp=2015.10.09-15.01.03
 PakFile.LastCompileMethod=Unknown
@@ -600,9 +600,9 @@ MRUItem0=C:/Users/Stoffe/Desktop/bos_test2/Content/RollingCPP/Maps/RollingExampl
 RecentlyPlaced=/Script/bos_test2.MyProjectile;
 
 [RootWindow]
-ScreenPosition=X=318.000 Y=344.000
-WindowSize=X=1290.000 Y=730.000
-InitiallyMaximized=False
+ScreenPosition=X=2198.000 Y=334.000
+WindowSize=X=1300.000 Y=740.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
