--- a/bos_test2/Saved/Config/Windows/Engine.ini
+++ b/bos_test2/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../Users/Stoffe/Documents/GitHub/bos_test/bos_test2/Content
+Paths=D:/Users/Pandamonium/Documents/Unreal Projects/bos_test/bos_test2/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
 
